--- a/_modules/yearn_treasury/rules/ignore/swaps/compound.html
+++ b/_modules/yearn_treasury/rules/ignore/swaps/compound.html
@@ -93,12 +93,16 @@
             <span class="k">if</span> <span class="p">(</span>
                 <span class="n">tx</span><span class="o">.</span><span class="n">token</span> <span class="o">==</span> <span class="n">tx</span><span class="o">.</span><span class="n">from_address</span> <span class="o">==</span> <span class="n">event</span><span class="o">.</span><span class="n">address</span>
                 <span class="ow">and</span> <span class="n">tx</span><span class="o">.</span><span class="n">to_address</span> <span class="o">==</span> <span class="n">minter</span>
-                <span class="ow">and</span> <span class="n">minted</span> <span class="o">==</span> <span class="n">tx</span><span class="o">.</span><span class="n">amount</span>
+                <span class="c1"># TODO: get rid of this rounding when we migrate to postgres</span>
+                <span class="ow">and</span> <span class="nb">round</span><span class="p">(</span><span class="n">minted</span><span class="p">,</span> <span class="mi">14</span><span class="p">)</span> <span class="o">==</span> <span class="nb">round</span><span class="p">(</span><span class="n">tx</span><span class="o">.</span><span class="n">amount</span><span class="p">,</span> <span class="mi">14</span><span class="p">)</span>
             <span class="p">):</span>
                 <span class="k">return</span> <span class="kc">True</span>
             <span class="c1"># underlying side</span>
             <span class="k">elif</span> <span class="p">(</span>
-                <span class="n">tx</span><span class="o">.</span><span class="n">to_address</span> <span class="o">==</span> <span class="n">event</span><span class="o">.</span><span class="n">address</span> <span class="ow">and</span> <span class="n">tx</span><span class="o">.</span><span class="n">from_address</span> <span class="o">==</span> <span class="n">minter</span> <span class="ow">and</span> <span class="n">minted</span> <span class="o">==</span> <span class="n">tx</span><span class="o">.</span><span class="n">amount</span>
+                <span class="n">tx</span><span class="o">.</span><span class="n">to_address</span> <span class="o">==</span> <span class="n">event</span><span class="o">.</span><span class="n">address</span>
+                <span class="ow">and</span> <span class="n">tx</span><span class="o">.</span><span class="n">from_address</span> <span class="o">==</span> <span class="n">minter</span>
+                <span class="c1"># TODO: get rid of this rounding when we migrate to postgres</span>
+                <span class="ow">and</span> <span class="nb">round</span><span class="p">(</span><span class="n">minted</span><span class="p">,</span> <span class="mi">14</span><span class="p">)</span> <span class="o">==</span> <span class="nb">round</span><span class="p">(</span><span class="n">tx</span><span class="o">.</span><span class="n">amount</span><span class="p">,</span> <span class="mi">14</span><span class="p">)</span>
             <span class="p">):</span>
                 <span class="k">return</span> <span class="kc">True</span>
     <span class="k">return</span> <span class="kc">False</span></div>
@@ -114,13 +118,19 @@
             <span class="n">redeemer</span> <span class="o">=</span> <span class="n">event</span><span class="p">[</span><span class="s2">&quot;redeemer&quot;</span><span class="p">]</span>
             <span class="n">redeemed</span> <span class="o">=</span> <span class="n">tx</span><span class="o">.</span><span class="n">token</span><span class="o">.</span><span class="n">scale_value</span><span class="p">(</span><span class="n">event</span><span class="p">[</span><span class="s2">&quot;redeemTokens&quot;</span><span class="p">])</span>
             <span class="c1"># cToken side</span>
-            <span class="k">if</span> <span class="n">tx</span><span class="o">.</span><span class="n">token</span> <span class="o">==</span> <span class="n">event</span><span class="o">.</span><span class="n">address</span> <span class="ow">and</span> <span class="n">tx</span><span class="o">.</span><span class="n">from_address</span> <span class="o">==</span> <span class="n">redeemer</span> <span class="ow">and</span> <span class="n">redeemed</span> <span class="o">==</span> <span class="n">tx</span><span class="o">.</span><span class="n">amount</span><span class="p">:</span>
+            <span class="k">if</span> <span class="p">(</span>
+                <span class="n">tx</span><span class="o">.</span><span class="n">token</span> <span class="o">==</span> <span class="n">event</span><span class="o">.</span><span class="n">address</span>
+                <span class="ow">and</span> <span class="n">tx</span><span class="o">.</span><span class="n">from_address</span> <span class="o">==</span> <span class="n">redeemer</span>
+                <span class="c1"># TODO: get rid of this rounding when we migrate to postgres</span>
+                <span class="ow">and</span> <span class="nb">round</span><span class="p">(</span><span class="n">redeemed</span><span class="p">,</span> <span class="mi">14</span><span class="p">)</span> <span class="o">==</span> <span class="nb">round</span><span class="p">(</span><span class="n">tx</span><span class="o">.</span><span class="n">amount</span><span class="p">,</span> <span class="mi">14</span><span class="p">)</span>
+            <span class="p">):</span>
                 <span class="k">return</span> <span class="kc">True</span>
             <span class="c1"># underlying side</span>
             <span class="k">elif</span> <span class="p">(</span>
                 <span class="n">tx</span><span class="o">.</span><span class="n">to_address</span> <span class="o">==</span> <span class="n">redeemer</span>
                 <span class="ow">and</span> <span class="n">tx</span><span class="o">.</span><span class="n">from_address</span> <span class="o">==</span> <span class="n">event</span><span class="o">.</span><span class="n">address</span>
-                <span class="ow">and</span> <span class="n">redeemed</span> <span class="o">==</span> <span class="n">tx</span><span class="o">.</span><span class="n">amount</span>
+                <span class="c1"># TODO: get rid of this rounding when we migrate to postgres</span>
+                <span class="ow">and</span> <span class="nb">round</span><span class="p">(</span><span class="n">redeemed</span><span class="p">,</span> <span class="mi">14</span><span class="p">)</span> <span class="o">==</span> <span class="nb">round</span><span class="p">(</span><span class="n">tx</span><span class="o">.</span><span class="n">amount</span><span class="p">,</span> <span class="mi">14</span><span class="p">)</span>
             <span class="p">):</span>
                 <span class="k">return</span> <span class="kc">True</span>
     <span class="k">return</span> <span class="kc">False</span></div>
