--- a/_modules/yearn_treasury/rules/ignore/swaps/cowswap.html
+++ b/_modules/yearn_treasury/rules/ignore/swaps/cowswap.html
@@ -83,7 +83,7 @@
 <span class="kn">from</span><span class="w"> </span><span class="nn">yearn_treasury.rules.ignore.swaps._skip_tokens</span><span class="w"> </span><span class="kn">import</span> <span class="n">SKIP_TOKENS</span>
 
 
-<span class="n">YSWAPS</span><span class="p">:</span> <span class="n">Final</span> <span class="o">=</span> <span class="s2">&quot;0x9008D19f58AAbD9eD0D60971565AA8510560ab41&quot;</span>
+<span class="n">COWSWAP</span><span class="p">:</span> <span class="n">Final</span> <span class="o">=</span> <span class="s2">&quot;0x9008D19f58AAbD9eD0D60971565AA8510560ab41&quot;</span>
 
 
 <div class="viewcode-block" id="is_cowswap_swap">
@@ -109,23 +109,26 @@
 
     <span class="k">for</span> <span class="n">trade</span> <span class="ow">in</span> <span class="n">tx</span><span class="o">.</span><span class="n">events</span><span class="p">[</span><span class="s2">&quot;Trade&quot;</span><span class="p">]:</span>
         <span class="k">if</span> <span class="p">(</span>
-            <span class="n">trade</span><span class="o">.</span><span class="n">address</span> <span class="o">==</span> <span class="n">YSWAPS</span>
+            <span class="n">trade</span><span class="o">.</span><span class="n">address</span> <span class="o">==</span> <span class="n">COWSWAP</span>
             <span class="ow">and</span> <span class="n">TreasuryWallet</span><span class="o">.</span><span class="n">check_membership</span><span class="p">(</span><span class="n">trade</span><span class="p">[</span><span class="s2">&quot;owner&quot;</span><span class="p">],</span> <span class="n">block</span><span class="p">)</span>
             <span class="ow">and</span> <span class="n">trade</span><span class="p">[</span><span class="s2">&quot;buyToken&quot;</span><span class="p">]</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">SKIP_TOKENS</span>
         <span class="p">):</span>
             <span class="c1"># buy side</span>
-            <span class="k">if</span> <span class="p">(</span>
-                <span class="n">token_address</span> <span class="o">==</span> <span class="n">trade</span><span class="p">[</span><span class="s2">&quot;buyToken&quot;</span><span class="p">]</span>
-                <span class="ow">and</span> <span class="n">TreasuryWallet</span><span class="o">.</span><span class="n">check_membership</span><span class="p">(</span><span class="n">tx</span><span class="o">.</span><span class="n">to_address</span><span class="o">.</span><span class="n">address</span><span class="p">,</span> <span class="n">block</span><span class="p">)</span>  <span class="c1"># type: ignore [union-attr, arg-type]</span>
-                <span class="ow">and</span> <span class="n">amount</span> <span class="o">==</span> <span class="n">token</span><span class="o">.</span><span class="n">scale_value</span><span class="p">(</span><span class="n">trade</span><span class="p">[</span><span class="s2">&quot;buyAmount&quot;</span><span class="p">])</span>
+            <span class="k">if</span> <span class="n">token_address</span> <span class="o">==</span> <span class="n">trade</span><span class="p">[</span><span class="s2">&quot;buyToken&quot;</span><span class="p">]</span> <span class="ow">and</span> <span class="n">TreasuryWallet</span><span class="o">.</span><span class="n">check_membership</span><span class="p">(</span>
+                <span class="n">tx</span><span class="o">.</span><span class="n">to_address</span><span class="o">.</span><span class="n">address</span><span class="p">,</span> <span class="n">block</span>  <span class="c1"># type: ignore [union-attr, arg-type]</span>
             <span class="p">):</span>
-                <span class="k">return</span> <span class="kc">True</span>
+                <span class="c1"># TODO get rid of this rounding when we move to postgres</span>
+                <span class="n">buy_amount</span> <span class="o">=</span> <span class="nb">round</span><span class="p">(</span><span class="n">token</span><span class="o">.</span><span class="n">scale_value</span><span class="p">(</span><span class="n">trade</span><span class="p">[</span><span class="s2">&quot;buyAmount&quot;</span><span class="p">]),</span> <span class="mi">8</span><span class="p">)</span>
+                <span class="k">if</span> <span class="nb">round</span><span class="p">(</span><span class="n">amount</span><span class="p">,</span> <span class="mi">8</span><span class="p">)</span> <span class="o">==</span> <span class="n">buy_amount</span><span class="p">:</span>
+                    <span class="k">return</span> <span class="kc">True</span>
+                <span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Cowswap buy amount does not match: </span><span class="si">{</span><span class="nb">round</span><span class="p">(</span><span class="n">amount</span><span class="p">,</span><span class="w"> </span><span class="mi">8</span><span class="p">)</span><span class="si">}</span><span class="s2">   </span><span class="si">{</span><span class="n">buy_amount</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
             <span class="c1"># sell side</span>
-            <span class="k">elif</span> <span class="p">(</span>
-                <span class="n">token_address</span> <span class="o">==</span> <span class="n">trade</span><span class="p">[</span><span class="s2">&quot;sellToken&quot;</span><span class="p">]</span>
-                <span class="ow">and</span> <span class="n">tx</span><span class="o">.</span><span class="n">from_address</span> <span class="o">==</span> <span class="n">trade</span><span class="p">[</span><span class="s2">&quot;owner&quot;</span><span class="p">]</span>
-                <span class="ow">and</span> <span class="n">amount</span> <span class="o">==</span> <span class="n">token</span><span class="o">.</span><span class="n">scale_value</span><span class="p">(</span><span class="n">trade</span><span class="p">[</span><span class="s2">&quot;sellAmount&quot;</span><span class="p">])</span>
-            <span class="p">):</span>
+            <span class="k">elif</span> <span class="n">token_address</span> <span class="o">==</span> <span class="n">trade</span><span class="p">[</span><span class="s2">&quot;sellToken&quot;</span><span class="p">]</span> <span class="ow">and</span> <span class="n">tx</span><span class="o">.</span><span class="n">from_address</span> <span class="o">==</span> <span class="n">trade</span><span class="p">[</span><span class="s2">&quot;owner&quot;</span><span class="p">]:</span>
+                <span class="c1"># TODO get rid of this rounding when we move to postgres</span>
+                <span class="n">sell_amount</span> <span class="o">=</span> <span class="nb">round</span><span class="p">(</span><span class="n">token</span><span class="o">.</span><span class="n">scale_value</span><span class="p">(</span><span class="n">trade</span><span class="p">[</span><span class="s2">&quot;sellAmount&quot;</span><span class="p">]),</span> <span class="mi">8</span><span class="p">)</span>
+                <span class="k">if</span> <span class="nb">round</span><span class="p">(</span><span class="n">amount</span><span class="p">,</span> <span class="mi">8</span><span class="p">)</span> <span class="o">!=</span> <span class="n">sell_amount</span><span class="p">:</span>
+                    <span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Cowswap sell amount does not match: </span><span class="si">{</span><span class="nb">round</span><span class="p">(</span><span class="n">amount</span><span class="p">,</span><span class="w"> </span><span class="mi">8</span><span class="p">)</span><span class="si">}</span><span class="s2">   </span><span class="si">{</span><span class="n">sell_amount</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
+                    <span class="k">continue</span>
                 <span class="c1"># Did Yearn actually receive the other side of the trade?</span>
                 <span class="k">for</span> <span class="n">address</span> <span class="ow">in</span> <span class="n">TREASURY_WALLETS</span><span class="p">:</span>
                     <span class="k">if</span> <span class="n">TreasuryWallet</span><span class="o">.</span><span class="n">check_membership</span><span class="p">(</span><span class="n">address</span><span class="p">,</span> <span class="n">block</span><span class="p">):</span>
@@ -134,7 +137,7 @@
                             <span class="k">for</span> <span class="n">t</span> <span class="ow">in</span> <span class="n">TreasuryTx</span>  <span class="c1"># type: ignore [attr-defined]</span>
                             <span class="k">if</span> <span class="n">t</span><span class="o">.</span><span class="n">hash</span> <span class="o">==</span> <span class="n">tx</span><span class="o">.</span><span class="n">hash</span>
                             <span class="ow">and</span> <span class="n">t</span><span class="o">.</span><span class="n">token</span><span class="o">.</span><span class="n">address</span><span class="o">.</span><span class="n">address</span> <span class="o">==</span> <span class="n">trade</span><span class="p">[</span><span class="s2">&quot;buyToken&quot;</span><span class="p">]</span>
-                            <span class="ow">and</span> <span class="n">t</span><span class="o">.</span><span class="n">from_address</span><span class="o">.</span><span class="n">address</span> <span class="o">==</span> <span class="n">YSWAPS</span>
+                            <span class="ow">and</span> <span class="n">t</span><span class="o">.</span><span class="n">from_address</span><span class="o">.</span><span class="n">address</span> <span class="o">==</span> <span class="n">COWSWAP</span>
                             <span class="ow">and</span> <span class="n">t</span><span class="o">.</span><span class="n">to_address</span><span class="o">.</span><span class="n">address</span> <span class="o">==</span> <span class="n">address</span>
                         <span class="p">)</span>
 
