--- a/_modules/yearn_treasury/rules/ignore/swaps/uniswap.html
+++ b/_modules/yearn_treasury/rules/ignore/swaps/uniswap.html
@@ -132,7 +132,7 @@
                         <span class="k">if</span> <span class="nb">any</span><span class="p">(</span>
                             <span class="n">tokens</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span> <span class="o">==</span> <span class="n">transfer</span><span class="o">.</span><span class="n">address</span>
                             <span class="ow">and</span> <span class="n">tx</span><span class="o">.</span><span class="n">to_address</span>
-                            <span class="o">==</span> <span class="n">transfer</span><span class="o">.</span><span class="n">values</span><span class="p">()[:</span><span class="mi">1</span><span class="p">]</span>
+                            <span class="o">==</span> <span class="n">transfer</span><span class="o">.</span><span class="n">values</span><span class="p">()[:</span><span class="mi">1</span><span class="p">]</span>  <span class="c1"># type: ignore [index]</span>
                             <span class="o">==</span> <span class="p">[</span><span class="n">mint</span><span class="p">[</span><span class="s2">&quot;sender&quot;</span><span class="p">],</span> <span class="n">mint</span><span class="o">.</span><span class="n">address</span><span class="p">]</span>
                             <span class="k">for</span> <span class="n">transfer</span> <span class="ow">in</span> <span class="n">transfers</span>
                         <span class="p">):</span>
@@ -153,7 +153,7 @@
                         <span class="k">if</span> <span class="nb">any</span><span class="p">(</span>
                             <span class="n">tokens</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">==</span> <span class="n">transfer</span><span class="o">.</span><span class="n">address</span>
                             <span class="ow">and</span> <span class="n">tx</span><span class="o">.</span><span class="n">to_address</span>
-                            <span class="o">==</span> <span class="n">transfer</span><span class="o">.</span><span class="n">values</span><span class="p">()[:</span><span class="mi">1</span><span class="p">]</span>
+                            <span class="o">==</span> <span class="n">transfer</span><span class="o">.</span><span class="n">values</span><span class="p">()[:</span><span class="mi">1</span><span class="p">]</span>  <span class="c1"># type: ignore [index]</span>
                             <span class="o">==</span> <span class="p">[</span><span class="n">mint</span><span class="p">[</span><span class="s2">&quot;sender&quot;</span><span class="p">],</span> <span class="n">mint</span><span class="o">.</span><span class="n">address</span><span class="p">]</span>
                             <span class="k">for</span> <span class="n">transfer</span> <span class="ow">in</span> <span class="n">transfers</span>
                         <span class="p">):</span>
