deploy: ed5b56717eb8f67d29598a610c465ee6dc56cfa5

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -115,6 +115,7 @@
 <li><a href="yearn_treasury/rules/revenue/seasolver.html">yearn_treasury.rules.revenue.seasolver</a></li>
 <li><a href="yearn_treasury/rules/revenue/vaults.html">yearn_treasury.rules.revenue.vaults</a></li>
 <li><a href="yearn_treasury/rules/revenue/yteams.html">yearn_treasury.rules.revenue.yteams</a></li>
+<li><a href="yearn_treasury/yteams.html">yearn_treasury.yteams</a></li>
 </ul>
 
            </div>
